Refactoring
* Extracted schema
* Merged tomcat-default-config
* moved tests to aprop. namespaces